Removed all z-index. Fixed outline so that cards scale. Fixed choose-one.

--- a/src/choose-one/choose-one.scss
+++ b/src/choose-one/choose-one.scss
@@ -1,1 +1,19 @@
 @import "../backdrop/backdrop.scss";
+
+.choose-one {
+    position: absolute;
+    list-style: none;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.choose-one__option {
+    height: 50%;
+}
