--- a/src/hero/hero-power.scss
+++ b/src/hero/hero-power.scss
@@ -10,14 +10,18 @@
 
 .hero-power {
 	&.can-use {
+        transform-style: preserve-3d;
+
 		&::before {
 			@include green-glow-subtle();
 			@include hero-power-glow-shape();
+            transform: translateZ(-1px);
 		}
 
 		&.selected::before {
 			@include green-glow-intense();
 			@include hero-power-glow-shape();
+            transform: translateZ(-1px);
 		}
 	}
 }
@@ -25,6 +29,7 @@
 .hero-power {
 	position: relative;
 	height: 100%;
+    transform-style: preserve-3d;
 
 	&__portrait {
 		position: absolute;
@@ -32,7 +37,7 @@
 	    left: 23%;
 	    top: 27%;
 	    clip-path: ellipse(52% 55% at 50.5% 50.5%);
-	    z-index: -1; // Can this be avoided somehow?
+        transform: translateZ(-1px);
 	}
 
 	&__frame {
